<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>dev.ikm.build</groupId>
        <artifactId>java-parent</artifactId>
        <version>1.55.0</version>
    </parent>

    <groupId>dev.ikm</groupId>
    <artifactId>ikm-framework</artifactId>
    <version>3.0.1-IKM-KEC-PLUGIN-01-SNAPSHOT</version>
    <name>IKM Framework</name>
    <packaging>pom</packaging>
    <properties>
        <asm.version>9.9</asm.version>
        <java.version>25</java.version>
        <javafx.version>24.0.1</javafx.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <maven.compiler.release>25</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.0</junit.version>
        <log4j-slf4j2.version>3.0.0-beta2</log4j-slf4j2.version>
        <slf4j.version>2.0.13</slf4j.version>
        <komet.version>1.58.0-miin-fix-SNAPSHOT</komet.version>
        <tinkar.version>1.126.0-kl-merge-SNAPSHOT</tinkar.version>
        <jgit.version>6.10.0.202406032230-r-r5</jgit.version>
        <eclipse.collections.version>11.1.0-r13</eclipse.collections.version>
        <eclipse.collections.api.version>11.1.0-r11</eclipse.collections.api.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>dev.ikm.jpms</groupId>
                <artifactId>eclipse-collections</artifactId>
                <version>${eclipse.collections.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.ikm.jpms</groupId>
                <artifactId>eclipse-collections-api</artifactId>
                <version>${eclipse.collections.api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-base</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-swing</artifactId>
                <version>${javafx.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                    <release>25</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>${asm.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm-commons</artifactId>
                        <version>${asm.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm-tree</artifactId>
                        <version>${asm.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm-util</artifactId>
                        <version>${asm.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <executions>
                    <execution>
                        <id>jar</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <doclint>none</doclint>
                            <source>25</source>
                            <release>25</release>
                            <additionalOptions>--enable-preview</additionalOptions>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <doclint>none</doclint>
                    <failOnError>false</failOnError>
                    <source>25</source>
                    <release>25</release>
                    <additionalOptions>--enable-preview</additionalOptions>
                </configuration>
            </plugin>

        </plugins>
    </build>
    <modules>
        <module>plugin-layer</module>
        <module>plugin-service-loader</module>
        <module>orchestration-interfaces</module>
        <module>orchestration-provider</module>
        <!-- Note komet-orchestrationService must be last to pick up changes
             to modules that are plugins, but not dependencies (plugins are
             transparent to the build order) -->
        <module>komet-orchestrator</module>
    </modules>
</project>